@@ -1,6 +1,13 @@
 2007-12-12  Lillian Angel  <langel@redhat.com>
 
 	* Makefile.am
+	(clean-patch-ecj): Removed unpatching of ICEDTEA_PATCHES, only
+	ICEDTEA_ECJ_PATCH should be removed.
+	* Makefile.in: Regenerate.
+
+2007-12-12  Lillian Angel  <langel@redhat.com>
+
+	* Makefile.am
 	(stamps/clone-ecj.stamp): Removed extraction of openjdk sources. Now
 	only copies over openjdk dir.
 	* Makefile.in: Regenerate.
